# automation-center-f78c-2bKennethWilliams

./: .gitignore  Dockerfile  README.md  alembic  alembic.ini  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: __init__.py
api/v1/: __init__.py  health.py  settings.py  tasks.py
core/: fake_data.py  search.py
models/: __init__.py  task.py
schemas/: __init__.py  task.py
